--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="http://localhost:8097"></script>
+    <!-- <script src="http://localhost:8097"></script> -->
     <script src="dist/popup.js"></script>
   </body>
 </html>
