--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,6 +7,6 @@
   <body>
     <div id="root"></div>
     <!-- <script src="http://localhost:8097"></script> -->
-    <script src="dist/popup.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
